NMdoc/force-app/main/default/objects/EventVendor__c/fields/Service_Notes__c.field-meta.xml
<CustomField>
    <fullName>Service_Notes__c</fullName>
    <label>Service Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>